--- a/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
+++ b/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
@@ -1,6 +1,6 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="LogbookApp.Views.MaintainAircraft"
+    x:Class="LogbookApp.Views.MaintainAirfields"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,12 +11,11 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <!-- Collection of items displayed by this page -->
         <CollectionViewSource
             x:Name="itemsViewSource"
-            Source="{Binding Aircraft}"/>
+            Source="{Binding Airfields}"/>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Aircraft</x:String>
+        <x:String x:Key="AppName">Airfields</x:String>
     </Page.Resources>
     <Page.TopAppBar>
         <AppBar x:Name="topAppBar" Padding="10,0,10,0">
@@ -24,13 +23,13 @@
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Button Style="{StaticResource AddAppBarButtonStyle}"  Command="{Binding AddCommand,Mode=TwoWay}"  />
                     <Button Style="{StaticResource EditAppBarButtonStyle}" Command="{Binding EditCommand,Mode=TwoWay}" 
-                            CommandParameter="{Binding SelectedAircraft}" />
+                            CommandParameter="{Binding Selected}" />
                     <Button Style="{StaticResource RemoveAppBarButtonStyle}" Command="{Binding DeleteCommand,Mode=TwoWay}" 
-                            CommandParameter="{Binding SelectedAircraft}" />
+                            CommandParameter="{Binding Selected}" />
 
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    
+
                     <!--<Button Style="{StaticResource HelpAppBarButtonStyle}" />-->
                 </StackPanel>
             </Grid>
@@ -57,9 +56,9 @@
                 
             Grid.RowSpan="3"
             Padding="116,136,116,46"
-            ItemsSource="{Binding Aircraft}"
+            ItemsSource="{Binding Airfields}"
             
-            SelectedItem="{Binding SelectedAircraft,Mode=TwoWay}"
+            SelectedItem="{Binding Selected,Mode=TwoWay}"
             
             
             IsSwipeEnabled="false">
@@ -70,15 +69,15 @@
                     <Grid Margin="10">
                         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="230" Height="auto"  >
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Reg}" Foreground="White" FontSize="28" VerticalAlignment="Center"></TextBlock>
+                                <TextBlock Text="{Binding ICAOCode}" Foreground="White" FontSize="28" VerticalAlignment="Center"></TextBlock>
                                 <Rectangle Width="10"/>
-                                
+
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
 
-                                <TextBlock Text="{Binding AircraftClass.Text}" Foreground="#FFFF06B0" FontSize="18"></TextBlock>
+                                <TextBlock Text="{Binding Name}" Foreground="#FFFF06B0" FontSize="18"></TextBlock>
                                 <Rectangle Width="25"/>
-                              
+
 
                             </StackPanel>
                             <!--<TextBlock Text="{Binding Captain}"></TextBlock>
@@ -121,6 +120,7 @@
             
             SelectionMode="None"
             IsSwipeEnabled="false"/>
+
         <!-- Back button and page title -->
         <Grid>
             <Grid.ColumnDefinitions>
