--- a/LogbookApp/LogbookApp/Views/MaintainAircraftTypes.xaml
+++ b/LogbookApp/LogbookApp/Views/MaintainAircraftTypes.xaml
@@ -1,84 +1,40 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="LogbookApp.FlightsPage"
+    x:Class="LogbookApp.Views.MaintainAircraftTypes"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:LogbookApp"
+    xmlns:local="using:LogbookApp.Views"
     xmlns:common="using:LogbookApp.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:gala="using:GalaSoft.MvvmLight.Command"
     mc:Ignorable="d">
 
     <Page.Resources>
-
-        <!-- Collection of items displayed by this page -->
         <CollectionViewSource
             x:Name="itemsViewSource"
-            Source="{Binding Flights}"/>
-
+            Source="{Binding Items}"/>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Pilots Logbook</x:String>
-        <Style x:Key="MaintainAircraftButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource EditAppBarButtonStyle}">
-            <Setter Property="AutomationProperties.AutomationId" Value="AddAppBarButton"/>
-            <Setter Property="AutomationProperties.Name" Value="Aircraft"/>
-            
-            <Setter Property="Foreground" Value="Yellow"></Setter>
-        </Style>
-
-        <Style x:Key="MaintainAirfieldButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource EditAppBarButtonStyle}">
-            <Setter Property="AutomationProperties.AutomationId" Value="AddAppBarButton"/>
-            <Setter Property="AutomationProperties.Name" Value="Airfields"/>
-
-            <Setter Property="Foreground" Value="Green"></Setter>
-        </Style>
-
-
-        <Style x:Key="MaintainAircraftTypeButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource EditAppBarButtonStyle}">
-            <Setter Property="AutomationProperties.AutomationId" Value="AddAppBarButton"/>
-            <Setter Property="AutomationProperties.Name" Value="Aircraft Types"/>
-
-            <Setter Property="Foreground" Value="Orange"></Setter>
-        </Style>
-
+        <x:String x:Key="AppName">Aircraft Types</x:String>
     </Page.Resources>
     <Page.TopAppBar>
         <AppBar x:Name="topAppBar" Padding="10,0,10,0">
             <Grid>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Button Style="{StaticResource AddAppBarButtonStyle}"  Command="{Binding AddCommand,Mode=TwoWay}"  />
-                    <Button Style="{StaticResource EditAppBarButtonStyle}" Command="{Binding EditCommand,Mode=TwoWay}"
-                            CommandParameter="{Binding SelectedFlight}" />
-                    <Button Style="{StaticResource RemoveAppBarButtonStyle}" Command="{Binding DeleteCommand,Mode=TwoWay}" CommandParameter="{Binding SelectedFlight}" />
-                    
+                    <Button Style="{StaticResource EditAppBarButtonStyle}" Command="{Binding EditCommand,Mode=TwoWay}" 
+                            CommandParameter="{Binding Selected}" />
+                    <Button Style="{StaticResource RemoveAppBarButtonStyle}" Command="{Binding DeleteCommand,Mode=TwoWay}" 
+                            CommandParameter="{Binding Selected}" />
+
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Style="{StaticResource RefreshAppBarButtonStyle}" />
-                    <Button Style="{StaticResource HelpAppBarButtonStyle}" />
+
+                    <!--<Button Style="{StaticResource HelpAppBarButtonStyle}" />-->
                 </StackPanel>
             </Grid>
         </AppBar>
     </Page.TopAppBar>
-
-    <Page.BottomAppBar>
-        <AppBar x:Name="bottomAppBar" Padding="10,0,10,0">
-            <Grid>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Button Style="{StaticResource TotalsAppBarButtonStyle}"  Command="{Binding TotalsCommand,Mode=TwoWay}"  />
-
-                    <Button Style="{StaticResource MaintainAircraftButtonStyle}"  Command="{Binding MaintainAircraftCommand,Mode=TwoWay}"  />
-
-                    <Button Style="{StaticResource MaintainAirfieldButtonStyle}"  Command="{Binding MaintainAirfieldsCommand,Mode=TwoWay}"  />
-
-                    <Button Style="{StaticResource MaintainAircraftTypeButtonStyle}" 
-                            Command="{Binding MaintainAircraftTypesCommand,Mode=TwoWay}"  />
-
-                </StackPanel>
-                
-            </Grid>
-        </AppBar>
-    </Page.BottomAppBar>
     <!--
         This grid acts as a root panel for the page that defines two rows:
         * Row 0 contains the back button and page title
@@ -89,10 +45,7 @@
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
-
         </Grid.RowDefinitions>
-
-        
         <!-- Horizontal scrolling grid used in most view states -->
         <GridView HorizontalContentAlignment="Left" HorizontalAlignment="Left"
             x:Name="itemGridView"
@@ -102,36 +55,36 @@
                 
             Grid.RowSpan="3"
             Padding="116,136,116,46"
-            ItemsSource="{Binding Flights}"
+            ItemsSource="{Binding Items}"
             
-            SelectedItem="{Binding SelectedFlight,Mode=TwoWay}"
+            SelectedItem="{Binding Selected,Mode=TwoWay}"
             
             
             IsSwipeEnabled="false">
-            
+
             <GridView.ItemTemplate>
-                
+
                 <DataTemplate>
                     <Grid Margin="10">
-                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="230" Height="auto"  >
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Capacity.Description}" Foreground="#FFFF06B0" FontSize="18" VerticalAlignment="Center"></TextBlock>
-                            <Rectangle Width="10"/>
-                            <TextBlock Text="{Binding DateStr}" FontSize="14" VerticalAlignment="Center" ></TextBlock>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="230" Height="auto"  >
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Code}" Foreground="White" FontSize="28" VerticalAlignment="Center"></TextBlock>
+                                <Rectangle Width="10"/>
 
-                                <TextBlock Text="{Binding AcType.Code}"></TextBlock>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+
+                                
                                 <Rectangle Width="25"/>
-                                <TextBlock Text="{Binding Aircraft.Reg}"></TextBlock>
-                        
-                         </StackPanel>
-                            <TextBlock Text="{Binding Captain}"></TextBlock>
+
+
+                            </StackPanel>
+                            <!--<TextBlock Text="{Binding Captain}"></TextBlock>
                             <Rectangle Width="25"/>
                             <TextBlock  Text="{Binding DurationStr}" FontSize="30" Foreground="Yellow"
-                       ></TextBlock>
-                        <TextBlock Text="{Binding FromTo}" Foreground="Teal"></TextBlock>
-                            <TextBlock Text="{Binding Remarks}" Foreground="LightBlue"></TextBlock>
+                       ></TextBlock>-->
+                            <!--<TextBlock Text="{Binding FromTo}" Foreground="Teal"></TextBlock>
+                            <TextBlock Text="{Binding Remarks}" Foreground="LightBlue"></TextBlock>-->
 
                         </StackPanel>
                     </Grid>
@@ -166,21 +119,15 @@
             
             SelectionMode="None"
             IsSwipeEnabled="false"/>
-      
         <!-- Back button and page title -->
-        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
-            <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
-           
+            <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-
-      
 
         <VisualStateManager.VisualStateGroups>
 
@@ -195,16 +142,10 @@
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Padding">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="96,136,86,56"/>
-                        </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
 
-                <!--
-                    The back button and title have different styles when snapped, and the list representation is substituted
-                    for the grid displayed in all other view states
-                -->
+                <!-- The back button and title have different styles when snapped -->
                 <VisualState x:Name="Snapped">
                     <Storyboard>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
@@ -212,13 +153,6 @@
                         </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemListView" Storyboard.TargetProperty="Visibility">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"/>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Visibility">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
