infuriating binding problem.. Flight was loaded before datacontext set

--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -156,7 +156,7 @@
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox Width="88" SelectedValue="{Binding Landings,Mode=TwoWay}" 
+                    <ComboBox Width="88"  SelectedValue="{Binding Flight.LDG,Mode=TwoWay}"  
                               ItemsSource="{Binding LandingTimes}" HorizontalContentAlignment="Center"></ComboBox>
 
                     <Rectangle Width="70"></Rectangle>
