Frame nav restored - flight detail, maintain airfields and add airfield

--- a/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
+++ b/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
@@ -127,7 +127,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Command="{Binding GoBackCommand}" Style="{StaticResource BackButtonStyle}"/>
+            <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
 
