--- a/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
+++ b/LogbookApp/LogbookApp/Views/MaintainAirfields.xaml
@@ -116,10 +116,40 @@
             Visibility="Collapsed"
             Margin="0,-10,0,0"
             Padding="10,0,0,60"
-            ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
+          ItemsSource="{Binding Items}"
+            
+            SelectedItem="{Binding Selected,Mode=TwoWay}"
             
             SelectionMode="None"
-            IsSwipeEnabled="false"/>
+            IsSwipeEnabled="false">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="10">
+                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="230" Height="auto"  >
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding ICAOCode}" Foreground="White" FontSize="28" VerticalAlignment="Center"></TextBlock>
+                                <Rectangle Width="10"/>
+
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+
+                                <TextBlock Text="{Binding Name}" Foreground="#FFFF06B0" FontSize="18"></TextBlock>
+                                <Rectangle Width="25"/>
+
+
+                            </StackPanel>
+                            <!--<TextBlock Text="{Binding Captain}"></TextBlock>
+                            <Rectangle Width="25"/>
+                            <TextBlock  Text="{Binding DurationStr}" FontSize="30" Foreground="Yellow"
+                       ></TextBlock>-->
+                            <!--<TextBlock Text="{Binding FromTo}" Foreground="Teal"></TextBlock>
+                            <TextBlock Text="{Binding Remarks}" Foreground="LightBlue"></TextBlock>-->
+
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
         <!-- Back button and page title -->
         <Grid>
@@ -153,8 +183,17 @@
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
                         </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemListView" Storyboard.TargetProperty="Visibility">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"/>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemGridView" Storyboard.TargetProperty="Visibility">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
+                        </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="topAppBar" Storyboard.TargetProperty="Visibility">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
